# search-agent

./: main.py  pyproject.toml
config/: env.py
models/: agent.py
tools/: __init__.py  get_user_location.py  web_search.py
